# simple-chat

./: README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
